跑鞋小知识

--- a/encyclopedia.org
+++ b/encyclopedia.org
@@ -201,6 +201,67 @@ public static double GetDistance(double lat1, double lng1, double lat2, double l
   的乘积，最大功率在最高转速时输出；
 - 排量：就是气缸容积，越大也就意味着能够吸入更多的油气混合物，做工时爆炸能
   量就更强，输出扭矩就越大；
+** 跑鞋
+*** 鞋底结构
+**** 外底
+功能是增加地面与运动鞋之间的摩擦力。
+**** 中底
+- 功能：位于外底和内底之间，是运动鞋缓冲性能以及能量回弹的主要来源。
+- 材料：气垫、弹力胶、EVA、PU、弹簧
+- 减震性能：硬度低些好；
+- 回弹性能：硬度高些好；
+- 跑步中，在足与运动表面接触的20到30ms之内地面的垂直反作用力会达到人体体重
+  的2～3倍。
+**** 内底
+功能是提供舒适性。
+*** 数据项
+**** 最大垂直力
+最大垂直力，是运动学研究的物理用词，简化来说，慢跑时地面作用于垂直方向碰撞
+力，也就是你每踏出一步，脚能感受到的压力。通常情况下，这个垂直力的最大值在
+你自身体重的1.2倍到4倍之间。这个数据的用意在于，检测出跑鞋在鞋底功能上对脚
+部的压力缓解是否做到最好，得出的数据越小，表示鞋对减震效果越佳。减震性能好
+的运动鞋可以减小最大垂直力  
+**** 加载率
+平均加载率是指跑步每一次脚与地面接触时，单位时间内身体受到的总的作用力，通
+常用体重的倍数来衡量。由于每次脚与地面的接触时间仅为30～60毫秒，所以按1秒钟
+计算出来的平均加载率数值较大。数据越大，说明鞋对地面反作用力的减震效果越差 
+**** 足底压强
+足底压强，反映出人在运动时脚受到作用力在不同区域的分布情况。如果在相同的运
+动速度下，脚底的最大压强值越小，说明鞋的减震效果越好，或足底接触面积较大，
+让人的脚在运动时感觉更舒适 
+- 足底压强分布区域特征；
+- 平均最大压强值特征；
+- 平均压强值特征；
+- 纵跳落地缓冲压力值变化的时间差异性；
+影响因数
+- 体重：足底压力和体重的相关系数为0.37，足底压力的形成中体重贡献仅为13.8%，
+  因为体重和足底接触面积成正相关。
+- 年龄；
+- 性别；
+- 鞋底结构；
+- 步速：随步速加快而增大
+**** 能量回弹
+可以增加跳高高度和加快跑步速度，回弹的能量主要来自鞋受到冲击后鞋底受到挤压
+发生的形变，弹性势能储存在鞋底。
+一般，能量回弹性能越好，缓冲性能越差。
+*** 观点
+- 磨损与距离：规律运动跑者，跑500～800公里就得换鞋，一双跑鞋能穿多久？目
+  前国外多以公里数來计算，因为跑者的每一步踩下去都是压力、挤压，运动鞋经
+  反覆挤压就会变形，公里数直接影响跑鞋的鞋況，针对运动鞋材料进行疲劳性测试
+  发现，一双鞋大約可以跑500公里，假使以一个星期跑4次，每次跑5公里计算，25个
+  星期（约6个月）就跑了500公里，也就是说，大约半年就得换双鞋。若是每天跑步，
+  每次跑4～5公里，半年下來也累积了800公里，差不多该是换鞋的时候。
+- 磨损与场地：跑步场地也会影响运动鞋的使用时间长短，在PU跑道跑步的磨损程度
+  会比在健身房的跑步机上来得大，在柏油路上跑的磨损又比在PU跑道大；习惯在健
+  身房跑步的人，鞋子的寿命大多比较长 。
+- 磨损与体重：跑者的体重、跑法也是运动鞋的寿命的影响因素之一，体重较重的人，
+  跑鞋承受较大挤压力；双脚若是重重拖在地面摩擦的跑法，也比轻盈跑法的磨损大
+- 磨损与跑姿：有些人因跑步姿势不同，运动鞋磨损、挤压的位置比较特殊，可能还
+  沒到特定公里数，鞋子就已经变形，这时就得视鞋况决定是否换鞋。 
+- 人在负重的状态下徒步行走，每公里大约600～700步。
+- 脚触地瞬间，受到地面的冲击力将达到人体重量的2～4倍；
+- 脚在触地到抬离地面，受到一个向上的冲击力和向前的摩擦力。
+- 80%的人是以脚后跟外侧先着地；
 * 百科经济
 ** 基本概念
 - 利率：储蓄存款利率由国家统一规定，人民银行挂牌公告。利率也称为利息率，是在一定日期内利息与本金的比率，一般分为年利率、
