rtos的部分概念和矩阵的向量求导法则

--- a/hardware.org
+++ b/hardware.org
@@ -644,3 +644,125 @@ union testbase
 #+end_src
 如果我们设置testentirety为0xA55A，则每段的值如上面注释所示。
 ** arm
+*** cortex-m
+cortex-m是哈佛结构，指令总线和数据总线分开，都是32位宽，但是指令和数据公用
+存储器，所以不是4G+4G=8G的映射而是4G的映射空间。
+**** 总线
+内部有若干总线接口，这样可以同时取指和取数。
+- 指令存储区总线：两条，I‐Code 总线和 D‐Code 总线，前者用于取指，后者用于查表等操作。
+- 系统总线：用于访问内存和外设，覆盖的区域包括SRAM，片上外设，片外RAM，片外
+  扩展设备，以及系统级存储区的部分空间。
+- 私有外设总线：负责一部分私有外设的访问，主要就是访问调试组件。它们也在系
+  统级存储区。  
+**** 寄存器组
+cortex-m包含R0～R15寄存器，其中R13作为堆栈指针寄存器SP，共有2个（PSP和MSP），
+但是同一时刻只能有一个可以看到, 结构见表\ref{tbl-cortexm-reg}
+#+caption: 寄存器
+#+label: tbl-cortexm-reg
+|------+---------+------------|
+| 名字 | 别名    | 用途       |
+|------+---------+------------|
+| R0   |         | 通用寄存器 |
+| R1   |         | 通用寄存器 |
+| R2   |         | 通用寄存器 |
+| R3   |         | 通用寄存器 |
+| R5   |         | 通用寄存器 |
+| R6   |         | 通用寄存器 |
+| R7   |         | 通用寄存器 |
+|------+---------+------------|
+| R8   |         | 通用寄存器 |
+| R9   |         | 通用寄存器 |
+| R10  |         | 通用寄存器 |
+| R11  |         | 通用寄存器 |
+| R12  |         | 通用寄存器 |
+|------+---------+------------|
+| R13  | PSP/MSP | 堆栈指针   |
+| R14  | LR      | 链接寄存器 |
+| R15  | PC      | 程序计数器 |
+|------+---------+------------|
+- R0~R12:通用寄存器，用于数据操作。但是注意：绝大多数16位 Thumb 指令只能访
+  问 R0‐R7，而 32 位 Thumb‐2 指令可以访问所有寄存器，其中函数传参前4个参数
+  使用R0～R3传递(从右开始R0代表第1个，R3代表第4个)，函数返回值放在R0中。
+- R13:堆栈指针，存放栈顶指针，其最低2位永远是0，也就是栈是4字节对齐，栈帧是
+  4字节，；
+  1. MSP: 主栈指针，芯片复位后缺省使用的堆栈指针寄存器，用于操作系统内核以
+     及异常和中断处理例程, 特权级模式使用；
+  2. PSP：进程堆栈指针，由用户的应用程序代码使用，用户级模式使用；
+- R14：链接寄存器LR，当调用一个函数时，由 R14存储返回地址，不像大多数其它处
+  理器，ARM为了减少访问内存的次数（访问内存的操作往往要3 个以上指令周期，带
+  MMU和cache的就更加不确定了），把返回地址直接存储在寄存器中。这样足以使很
+  多只有1级函数调用的代码无需访问内存（堆栈内存），从而提高了函数调用的效率。
+  如果多于1级，则需要把前一级的R14值压到堆栈里。在ARM上编程时，应尽量只使用
+  寄存器保存中间结果，迫不得以时才访问内存。
+- R15：PC程序计数器，指向当前程序地址。如果修改它的值，就能改变程序的执行流；
+- 特殊功能寄存器：见表\ref{tbl-cortex-sfr-reg}
+  #+caption: 特殊功能寄存器
+  #+label: tbl-cortex-sfr-reg
+  |-----------+----------------------------------------------------+------------------------|
+  | 名字      | 功能                                               | 说明                   |
+  |-----------+----------------------------------------------------+------------------------|
+  | xPSR      | 记录ALU标志（0标志，进位标志，负数标志，溢出标志） | 状态字寄存器（三合一） |
+  |           | ，执行状态，以及当前正服务的中断号                 |                        |
+  |-----------+----------------------------------------------------+------------------------|
+  | PRIMASK   | 屏蔽除NMI异常的所有中断                            | 中断屏蔽寄存器         |
+  | FAULTMASK | 类似PRIMASK，但被屏蔽后可以“上访”                | 中断屏蔽寄存器         |
+  | BASEPRI   | 屏蔽所有优先级不高于某个具体数值的中断             | 中断屏蔽寄存器         |
+  |-----------+----------------------------------------------------+------------------------|
+  | CONTROL   | 定义特权状态，并且决定使用哪一个SP和控制寄存器     | 控制寄存器             |
+  |-----------+----------------------------------------------------+------------------------|
+  1. 程序状态字寄存器组：PSRs；
+  2. 中断屏蔽寄存器组：PRIMASK, FAULTMASK, BASEPRI；
+  3. 控制寄存器：CONTROL；
+**** 操作模式
+分两种操作模式（handler和thread）和两种特权操作（特权级和用户级），见表
+\ref{tbl-cortexm-model}所示。
+#+caption: 操作模式和特权级别
+#+label: tbl-cortexm-model
+|------------+-------------+------------|
+|            | 特权级      | 用户级     |
+|------------+-------------+------------|
+| 异常代码   | handler模式 | 错误用法   |
+| 主程序代码 | thread模式  | thread模式 |
+|------------+-------------+------------|
+在cortexm运行主应用程序时（线程模式），既可以使用特权级，也可以使用用户级
+通过修改CONTROL寄存器；但是异常服务例程必须在特权级下执行, 复位后，处理器默
+认进入线程模式，特权极访问。在特权级下，程序可以访问所有范围的存储器（如果
+有MPU，还要在MPU规定的禁地之外），并且可以执行所有指令。 \\
+在特权级下的程序可以为所欲为，但也可能会把自己给玩进去，被切换到用户级。一
+旦进入用户级，再想回来就得走“法律程序”了，用户级的程序不能简简单单地试图
+改写 CONTROL 寄存器就回到特权级，它必须先“申诉”：执行一条系统调用指令
+(SVC)。这会触发 SVC 异常，然后由异常服务例程（通常是操作系统的一部分）接管，
+如果批准了进入，则异常服务例程修改CONTROL寄存器，才能在用户级的线程模式下重
+新进入特权级。事实上，从用户级到特权级的唯一途径就是异常：如果在程序执行过
+程中触发了一个异常，处理器总是先切换入特权级，并且在异常服务例程执行完毕退
+出时，返回先前的状态（也可以手工指定返回的状态）。 
+**** 中断异常
+- svc异常：SVC（Supervisor Call）指令用于产生一个SVC异常。它是用户模式代码
+  中的主进程，用于创造对特权操作系统代码的调用。SVC是用于呼叫操作系统所提供
+  API的正道。用户程序只需知道传递给操作系统的参数，而不必知道各API函数的地
+  址。SVC指令带一个8位的立即数，可以视为是它的参数，被封装在指令自身，如
+  #+begin_src asm
+  SVC    3; 呼叫3号系统服务
+  #+end_src
+  则3被封装在这个SVC指令中。因此在SVC服务程序中，需要读取本次触发SVC异常的
+  SVC指令，并提取出8位立即数所在的位段，从而判断系统调用号, 流程如下.  
+  1. 检测LR的第2位，即检测上一级程序最后的执行PC地址，其第2位可以判断上一个
+     程序用的是MSP还是PSP堆栈；
+  2. 从判断出的SP中读取被压入的PC值；
+  3. 根据PC获取svc的地址，然后从svc指令中提取服务号立即数；
+- PENDSVC异常: SVC（系统服务调用）和PENDSVC（可挂起系统服务调用）的区别在于
+  SVC异常必须立即得到相应，而PENDSVC则不是，他可以像普通中断一样被挂起，知
+  道其他重要任务完成才执行它，挂起PENDSVC的方式为：手工写入NVIC的PENDSVC挂
+  起寄存器。SVC的用途：操作系统可以不让用户直接访问硬件，而是通过触发SVC异
+  常来使用SVC系统调用来让用户程序简介访问硬件。PENDSVC的用处：上下文切换，
+  如ucos上下文切换就是用到PENDSVC的。 
+  
+**** 存储
+**** 编程
+- 指针的汇编反应：比如*a=b, 如果R4=a，b=R5，则汇编等同于, 即中括号是解引用。
+  #+begin_src c
+  *a = b//STR     R5, [R4]
+  #+end_src
+  
+
+
