--- a/os.org
+++ b/os.org
@@ -3,6 +3,28 @@
 #+latex_class: org-latex-pdf 
 #+latex: \newpage 
 
+
+
+* 基本概念
+** 进程
+一个进程代表一个任务，多进程也就是多任务，一个进程包含运行所需的资源，包含
+运行代码，内存空间，栈空间，外设资源等。在Windows中一个应用程序就是一个进程。
+** 线程
+在一定程度上进程的原理和线程一样。每个进程都有一个PCB块记录进程的各种资源信
+息，线程一般也有。线程是进程的功能子集，一个进程可以包含多个线程，多个线程
+协作完成进程的任务，一般线程所需资源有代码和栈空间，其中栈空间用于记录线程
+切换时自己的上下文，所以比起进程概念比较"轻"，CPU在上下文切换时更快捷方便.\\ 
+一般的嵌入式操作系统实现的是单进程下多线程，用一个上下文调度器进行线程切换。
+如果要实现多进程，估计需要多个调度器，多个调度器再协作，或者在一个调度器中
+控制多个进程的资源和代码以及线程功能（个人猜想）。
+** 信号量
+信号量用于记录临界资源的个数，当多个线程试图访问这些资源时，每访问一个资源
+信号量减1，也就是传说中的P操作，每访问完一个资源，将释放信号量加1，也就是传
+说中的V操作，当信号量减为1时，这个资源变成临界区资源，如果信号量减为0后，新
+申请资源的线程将被挂起。\\ 
+信号量实现的一种简单方式，就是设置1个整数变量和指向资源的指针的结构体，在线
+程访问这个变量时，关闭所有的中断和异常，然后对变量进行加1或者减1，实现信号
+量的访问。  
 * android
 ** base
 - 上下文context
