基于加速度数据计算速度算法

--- a/algorithm.org
+++ b/algorithm.org
@@ -1165,3 +1165,34 @@ while(1)
 //返回(w_{k}, b_{k})，这里k是错误次数
 }
 #+end_src
+* 算法实现
+** 基于加速度数据计算速度算法
+*** 数据源
+基础数据来源于加速度数据，具体要求如下
+- X轴正方向指向脚尖，
+- X轴正负16G范围；
+- X轴数据6点均值滤波；
+*** 速度算法原理
+#<<velocity-alg>>
+在跑步时，X轴加速度数据呈现类正弦波波形，波峰为脚往前脚迈刚接触到大地的时刻，
+波谷为脚往后蹬刚离开大地时刻，两个波峰之间的数据刚好是脚迈出1步的数据。通过
+提取一个正弦波数据中的特征\(X\)，并经过线性回归分析，得出速度和特征之间的函
+数关系\(V(X)\)，经过训练集数据的训练得出权重W和截距B，如果有新的特征\(X\)
+时，经过\(V(X)\)计算得出速度值。
+*** 距离算法原理
+通过[[velocity-alg][速度算法]]计算出1个正弦波速度V，在计算1个正弦波的时间T，1个正弦波的距离l
+通过公式可以计算出1步的距离。通过总的步数N可以计算出总的距离\(L=N*l\)。
+$$l=V*T$$ 
+*** 着地时间算法原理
+通过[[velocity-alg][速度算法原理]]中描述的跑步过程，可知，1步的着地时间，可以通过计算波峰和
+波谷之间的时间来估算，总的着地时间即为步数乘以1步的着地时间。
+*** 冲刺次数算法原理
+基于[[velocity-alg][速度算法原理]]输出的速度参数，统计在一定时间t内，速度递增v，表示一次冲刺，
+目前t阈值设置为5秒，v设置为1m/s，步骤如下；
+1. 缓存t时间内的速度输出n个；
+2. 校验n个v是否递增，如果不递增清空缓存，否则进到第三步；
+3. 以第n个v减去第1个v，如果相差1m/s，则判断为1次冲刺；
+4. 清空缓存，重复第1到第4步；
+
+
+
