--- a/encyclopedia.org
+++ b/encyclopedia.org
@@ -297,3 +297,6 @@ public static double GetDistance(double lat1, double lng1, double lat2, double l
 - 固定资产折旧的计算方法：企业一般用年限平均法计提折旧，他是根据固定资产的原值减去残值后的余额，固定资产残值一般按固定资
   产的原值的5%预计，(也可根据实际使用年限预计残值)一般建筑类使用20年，设备类使用15年。公式：固定资产年折旧额=固定资产原
   值-净残值/固定资产预计使用年限，年折旧额除以12=月折旧额；
+- M0货币：就是社会上的现金；
+- M1货币：就是M0+企业的活期存款；
+- M2货币：就是M1+全国的定期存款；
