--- a/algorithm.org
+++ b/algorithm.org
@@ -828,6 +828,16 @@ $$\frac{dL}{dW}=-2X'Y+2X'XW=0$$
 $$X'XW=X'Y$$ 
 其中如果\(X'X\)的逆存在，最小二乘问题的解是：
 $$W=(X'X)^{-1}X'Y$$ 
+*** 核函数
+核是一个函数K，对所有\(x, z \in{}X\)，满足：
+$$K(x, z) = <\phi{}(x).\phi{}(z)>$$ 
+这里\(\phi\)是从X到特征空间F的映射。\\
+核这个名字是从积分算子理论中来的，这个理论以核与其相关特征空间的关系的理论
+为基础。对偶表达的一个重要结果是特征空间的维数不再影响计算。当不再显示表达
+特征空间向量，而是通过计算核函数的值来计算内积时所需算子数目不一定与特征的
+数目成比例。核的使用使得将数据隐式表达为特征空间，并在其中训练一个线性学习
+器成为可能，从而越过了本来需要的计算特征映射的问题。关于训练样例的唯一信息
+是他们在特征空间的Gram矩阵。这个句子又称为核矩阵。
 ** k临近算法
 K临近算法举例，已知若干电影(训练集)的标签有“爱情片”，“动作片”，而这些标 
 签大体是由这些电影中所含的打斗场景和接吻场景次数(特征)决定。现在有一部电影
@@ -1178,7 +1188,10 @@ while(1)
 波谷为脚往后蹬刚离开大地时刻，两个波峰之间的数据刚好是脚迈出1步的数据。通过
 提取一个正弦波数据中的特征\(X\)，并经过线性回归分析，得出速度和特征之间的函
 数关系\(V(X)\)，经过训练集数据的训练得出权重W和截距B，如果有新的特征\(X\)
-时，经过\(V(X)\)计算得出速度值。
+时，经过\(V(X)\)计算得出速度值。1步内特征包含
+1. 加速度数据的均值；
+2. 加速度数据的标准差；
+3. 功率：加速度平方/(n*1000); 
 *** 距离算法原理
 通过[[velocity-alg][速度算法]]计算出1个正弦波速度V，在计算1个正弦波的时间T，1个正弦波的距离l
 通过公式可以计算出1步的距离。通过总的步数N可以计算出总的距离\(L=N*l\)。
