加入通信章节，加入linux命令节

--- a/decoration.org
+++ b/decoration.org
@@ -51,7 +51,8 @@
 - 检查建材的品牌与合同是否相符：
 - 检查室内有害气体是否超标：可找正规机构检测；
 * 装修
-装修原则：轻装修，重装饰, 一般包括：水电改造，贴砖，刷墙，做厨房，卫生间吊顶，橱柜等；
+装修原则：轻装修，重装饰, 一般包括：水电改造，贴砖，刷墙，做厨房，卫生间吊
+顶，橱柜等； 
 ** 装修流程
 按照时间顺序大体30步多：
 1. 办理开工手续：替工人办理门禁等手续；
