--- a/math.org
+++ b/math.org
@@ -777,6 +777,11 @@ $$ \hat{\theta}_{ML} = argmax_{\theta} \frac{f(x|\theta)g(\theta)}{\int{f(x|\the
   2. 随机性分类：表示某个样本点属于某个类别的概率为多少，该样本点也有可能属
      于另一个类别，属于另一个概率，通过比较各个概率值大小来判断该样本点属于
      哪个类别，一般这时候采用贝叶斯公式进行分类； 
+- 观察研究：在只观察不干扰的情况下搜集信息，抽样调查时观察研究中很重要的一
+  种，抽样调查是从某个特定总体中抽取样本，然后从样本中摘取关于总体的信息；
+- 普查：试图取得总体中每个个体的信息；
+- 实验：会对个体做某件事，然后观察个体如何反应，实验的目的通常是要了解，某
+  种处理是否确实会引起某种反应；
 - 算术平均值：算术平均值是期望值的无偏估计量；
   $$ \overline{x} = \frac{x_{1}+...+x_{n}}{n} = \frac{\sum_{i=1}^{n}x_{i}}{n}$$
 - 均方根平均值： $$ \overline{x}=\sqrt{\frac{x_{1}^{2}+...+x_{n}^{2}}{n}}=\sqrt{\frac{\sum_{i=1}^{n}x_{i}^{2}}{n}}$$
@@ -834,7 +839,7 @@ $$ \hat{\theta}_{ML} = argmax_{\theta} \frac{f(x|\theta)g(\theta)}{\int{f(x|\the
   信息量准则。它建立在熵的概念基础上，可以权衡所估计模型的复杂度和此模型拟
   合数据的优良性。在一般的情况下，AIC可以表示如下, 其中k是参数的数量，L是似
   然函数.  $$ AIC=2k-2ln(L)$$ 
-- BIC: bayesian information criterion, 贝叶斯信息量. $$ -2ln(L)+ln(n)*k $$ 
+- BIC: bayesian information criterion, 贝叶斯信息量. $$ -2ln(L)+ln(n)*k $$
 ** 估计量评估
 对于一般情况下，随机变量都会服从正太分布\(N(\mu, \sigma^{2})\)，令其概率密度为p(x).则log似然函数为
 $$ L(\mu,\sigma|\chi)=-\frac{N\log(2\pi)}{2}-N\log\sigma-\frac{\sum_{t}(x^{t}-\mu)^{2}}{2\sigma^{2}}$$ 分布对参数求偏导
