精确度和准确度

--- a/math.org
+++ b/math.org
@@ -840,6 +840,13 @@ $$ \hat{\theta}_{ML} = argmax_{\theta} \frac{f(x|\theta)g(\theta)}{\int{f(x|\the
   合数据的优良性。在一般的情况下，AIC可以表示如下, 其中k是参数的数量，L是似
   然函数.  $$ AIC=2k-2ln(L)$$ 
 - BIC: bayesian information criterion, 贝叶斯信息量. $$ -2ln(L)+ln(n)*k $$
+- 真值：对某个指标的测量，它在理论上具有一个真值；
+- 准确度：一般对某指标的测量其多次测量值呈现一个正态分布的分布曲线，此正态
+  分布曲线的平均值代表测量的最佳估计值，但是平均值并不一定就是真值，定义准
+  确度为平均值相对于真值的偏移度，准确度是对系统误差的衡量，是通过多次完全
+  重复不恰当的测量方式而产生的，准确度通常取决于对测量系统的校准；
+- 精度：每次测量值在彼此之间有差别，精度是值的发散程度，由标准差、信噪比来
+  描述，精度是对随机噪声的衡量；
 ** 估计量评估
 对于一般情况下，随机变量都会服从正太分布\(N(\mu, \sigma^{2})\)，令其概率密度为p(x).则log似然函数为
 $$ L(\mu,\sigma|\chi)=-\frac{N\log(2\pi)}{2}-N\log\sigma-\frac{\sum_{t}(x^{t}-\mu)^{2}}{2\sigma^{2}}$$ 分布对参数求偏导
