conmunication base inf

--- a/communication.org
+++ b/communication.org
@@ -6,6 +6,44 @@
 
 
 * 概念
-
+- 信源编解码：信源编码和解码时两个逆过程，信源编码有2个作用
+  1. 进行模/数转换；
+  2. 对转换后的数据进行压缩
+- 信道编解码：同样是两个逆过程，信源编码后，如果直接将二进制信号在信道（网
+  线、电磁波）传输，由于一般的信道都不够理想，则传输效果会非常差。为此，人
+  们通过对1个或多个信源码插入若干码元，比如（NRZ码等），通过使用插入了冗余
+  信息的码在信道上传输，则接收方接受到信号后，通过这些冗余信息可以将传输错
+  误的码元恢复出来。个人认为经过信道编码后的信号就是基带信号了。
+- 调制解调：基带信号通常不能适应信道的传输（比如无线射频信道），所以需要将
+  基带信号调制到载波上去，通过载波在信道上的传输来传递信号；对方接收到载波
+  信号后，再解调，再信道解码，再信源解码恢复出模拟信号。
+* 通信原理
+** 模拟信号数字化
+模拟信号数字化，采用抽样定理，抽样出信号，在通过编码（比如格雷码）将抽样的
+信号量化、编码成信源编码。过程
+- 抽样：抽样定理；
+- 量化：拿幅度抽样举例，将幅度限定几个段位，每个抽样的信号必定落在某个段位
+  里面，方法有
+  1. 均匀量化：划分的每个段位宽度均匀一样；
+  2. 非均匀量化：段位宽度不均匀；
+- 编码：对划分的段位，使用一定字长的二进制比特进行编码，则抽样量化过的信号，
+  就必定属于某个二进制数据（一定字长），编码方案有
+  1. 二进制码：一般的二进制编码；
+  2. 格雷码；
+  3. 折叠二进制码；
+  4. PCM：一般PCM编码的信号也叫数字基带信号；
+** 数字基带信号
+数字基带信号的特点是功率谱集中在零频率附近。数字基带信号通常是在电缆线路中
+传输，数字基带信号的波形主要有
+1. 单极性不归零码：NRZ码；
+2. 双极性不归零码：NRZ码；
+3. 单极性归零码：RZ码；
+4. 双极性归零码：RZ码；
+5. 差分码
+数字基带信号在传输时，为了克服传输损耗，常常需要进行信道编码。主要的码型有
+1. HDB3码：3阶高密度双极性码
+2. AMI码：传号交替反转码；
+3. 分相码；
+4. CMI码：传号反转码；
 * LTE
 
